--- a/.build/package.json
+++ b/.build/package.json
@@ -41,7 +41,8 @@
     "jest-html-reporter": "^3.3.0",
     "jest-junit": "^12.0.0",
     "jest-sonar-reporter": "^2.0.0",
-    "mongodb-memory-server": "^8.13.0",
+    "mockingoose": "^2.15.2",
+    "mongodb-memory-server": "^8.9.3",
     "prettier": "^2.2.1",
     "serverless": "^3.22.0",
     "serverless-offline": "^6.8.0",
